# advent-of-code-2020

./: README.md  pyproject.toml  run.py
day01/: solution.sql
day02/: pyproject.toml  solution.py  test_solution.py
day03/: solution.py  test_solution.py
day04/: solution.py  test_solution.py
day05/: solution.py  test_solution.py
day06/: solution.py  test_solution.py
