[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = ""
authors = ["John Sutherland <john@sneeu.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
